--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ header {
 }
 main {  
   width: 100%;
+  height: calc(100%-60px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,7 +26,7 @@ main {
 }
 
 form {
-  width:100%;
+
 margin-top: 10%;
   display: grid;
   justify-content: center;
@@ -41,7 +42,7 @@ li {
   list-style: none;
 }
 p {
-  font-size: 20px;
+  font-size: 17px;
   font-weight: 300;
 }
 
@@ -55,7 +56,6 @@ li input {
 }
 .input-button {
   display: flex;
-
   gap: 10px;
    
   
@@ -68,8 +68,9 @@ li input {
   color: white;
   background: #f17ea1;
   border: none;
-  width: 230px;
+  width: 250px;
   height: 30px;
+  padding: 0 8px;
 }
 
 select {
@@ -79,11 +80,14 @@ select {
   font-size: 15px;
   border: 0.5px solid #ffcbdb;
   background: #ffe4e1;
-  color: #ffb6c1;
+  color:#a0a0a0 ;
   padding-left: 10px;
 }
 
-@media screen and (max-width: 530px) {
+
+
+
+@media screen and (max-width: 800px) {
   form {
     display: grid;
     grid-template-columns: 190px;
